--- a/CH1_机器学习理论基础.ipynb
+++ b/CH1_机器学习理论基础.ipynb
@@ -4,18 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 机器学习理论基础"
+    "# 机器学习理论基础"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### 采样和评估方法\n",
-    "\n",
-    "#### 留出法（hold-out）\n",
+    "## 采样和评估方法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 留出法（hold-out）\n",
     "\n",
     "直接将数据集D分成两个互斥的集合，其中一个做训练集S，另一个做测试集T。**训练/测试集的划分要尽可能保持数据分布的一致性，至少要保证样本类别的比例相似。**从采样的角度看数据划分过程，保留类别比例的采样方式通常称为**“分层采样”**。\n",
     "\n",
@@ -24,11 +27,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "#### 交叉验证法\n",
+    "### 交叉验证法\n",
     "\n",
     "将数据集D划分成k个大小相似的互斥子集，即$D = D_1\\cup D_2 \\cup ...\\cup D_k, D_i\\cup D_j = \\emptyset (i \\neq j)$。每个子集从D中分层采样得到，每次用k-1个子集的并集作为训练集，余下的子集作为测试集；从而进行k次训练测试，返回均值。通常也称为“k折交叉验证”(k-fold cross validation)，k最常用取值是10。\n",
     "\n",
@@ -37,11 +38,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "#### 自助法(bootstrapping)\n",
+    "### 自助法(bootstrapping)\n",
     "\n",
     "hold-out 和 k-fold cross validation都保留了一部分互斥子集作为测试，实际评估的模型使用的训练集是D的子集，会引入因训练样本规模不同带来的估计偏差。\n",
     "\n",
@@ -60,11 +59,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "#### 类别不平衡问题\n",
+    "### 类别不平衡问题\n",
     "\n",
     "类别不平衡指的就是分类任务中不同类别的训练样例比例差别很大。即使原始问题中不同类别的训练样例比例均衡，经过 OvR 、MvM 之后产生的二分类任务仍可能出行不平衡现象。\n",
     "\n",
@@ -79,9 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "再缩放的思想虽然简单，但实际操作却不平凡，主要是因为**“训练集是真实样本总体的无偏采样”**假设往往并不成立。所以观测几率不一定能代表真实几率。\n",
     "\n",
@@ -96,14 +91,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 性能度量"
+    "## 性能度量"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 交叉验证集"
+    "### 交叉验证集"
    ]
   },
   {
@@ -119,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 成本函数"
+    "### 成本函数"
    ]
   },
   {
@@ -167,7 +162,7 @@
     }
    },
    "source": [
-    "#### 学习曲线"
+    "### 学习曲线"
    ]
   },
   {
@@ -339,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 查准率和召回率\n",
+    "### 查准率和召回率\n",
     "\n",
     "对于先验概率比较低的事件（比如普通肿瘤中患癌症的概率是0.5%），模型的准确性不能评价一个模型的好坏。我们可以引入另外两个概念，**查准率（precision）**和**召回率（recall）**。\n",
     "\n",
@@ -381,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### F1 score\n",
+    "### F1 score\n",
     "\n",
     "如果现在一个算法的 (precision, recall)是（0.5， 0.4），另外一个是（0.02， 1.0）。哪个好呢？\n",
     "\n",
@@ -408,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ROC 与 AUC\n",
+    "### ROC 与 AUC\n",
     "\n",
     "若一个学习器的ROC（受试者工作特征曲线，Receiver Operating Characteristic Cure）曲线被另一个学习器曲线完全“包住”，则可断言后者的性能优于前者；如果发生交叉，则看ROC曲线下的面积，也就是AUC(Area Under ROC Cure)"
    ]
@@ -417,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 欠拟合和过拟合"
+    "## 欠拟合和过拟合"
    ]
   },
   {
@@ -481,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 算法模型性能优化\n",
+    "## 算法模型性能优化\n",
     "\n",
     "当机器学习算法无法很好预测新数据，首先来判断算法模型是**欠拟合还是过拟合？**\n",
     "\n",
@@ -498,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 多分类学习"
+    "## 多分类学习"
    ]
   },
   {
