--- a/CH2_最优化理论.ipynb
+++ b/CH2_最优化理论.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 最优化理论\n",
+    "# 最优化理论\n",
     "\n",
     "很多机器学习算法最后都归结为求解最优化问题。最优化问题一般都是求解极大值或者极小值，对于连续可微函数，在数学上有明确的[求解方法](https://blog.csdn.net/lanchunhui/article/details/51371444)。**实际问题中，函数本身可能过于复杂，比如包含指数函数、对数函数以及根号等，使得求解偏导数等于0的方程组不是那么容易，所以我们只能通过迭代的方法求近似解，称为数值计算。**\n",
     "\n",
@@ -22,14 +22,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 梯度下降法"
+    "## 梯度下降法"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 梯度下降法原理"
+    "### 梯度下降法原理"
    ]
   },
   {
@@ -103,15 +103,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 批量梯度下降算法（Batch Gradient Descent，简称BGD）\n",
+    "### 批量梯度下降算法（Batch Gradient Descent，简称BGD）\n",
     "\n",
-    "梯度下降法的原理可以看第1.2节最优化理论的“梯度下降法”。\n",
+    "梯度下降法的原理可以看上面最优化理论的“梯度下降法原理”。\n",
     "\n",
     "根据成本函数，梯度下降公式是：\n",
     "\n",
-    "$$\\begin{split}\\theta_j = &\\theta_j - \\alpha \\frac{\\partial J(\\theta)}{\\partial \\theta_j}\\\\\n",
-    "= &\\theta_j - \\frac{\\alpha}{m}\\sum_{i=1}^{m}(h(\\textbf{x}^{(i)})-y^{(i)})x_j^{(i)}\n",
-    "\\end{split}$$"
+    "$$\\begin{split}\\theta_{j+1} = &\\theta_j - \\alpha_{j+1} \\frac{\\partial J(\\theta)}{\\partial \\theta}|_{\\theta = \\theta_j}\\\\\n",
+    "= &\\theta_j - \\frac{\\alpha_{j+1}}{m}\\sum_{i=1}^{m}(h(\\textbf{x}^{(i)})-y^{(i)})x_j^{(i)}\n",
+    "\\end{split}$$\n",
+    "\n",
+    "如果 每一步的学习率是一致不变的，可以记为 $\\alpha$."
    ]
   },
   {
@@ -128,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 随机梯度下降算法(Stochastic Gradient Descent，简称SGD)\n",
+    "### 随机梯度下降算法(Stochastic Gradient Descent，简称SGD)\n",
     "上面的梯度下降法中每次循环更新参数需要遍历所有的训练数据集，我们可以改成每次随机从训练数据集里抽取一个数据进行迭代计算，这就是**随机梯度下降法**，公式如下：\n",
     "\n",
     "$$\\theta_j = \\theta_j - \\alpha(h(\\textbf{x}^{(i)})-y^{(i)})x_j^{(i)}$$"
@@ -154,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 小批量梯度下降法（Mini-batch Gradient Descent，简称MBGD）"
+    "### 小批量梯度下降法（Mini-batch Gradient Descent，简称MBGD）"
    ]
   },
   {
@@ -170,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [最大似然估计（maximum likelihood estimation，缩写为MLE）](https://zh.wikipedia.org/wiki/%E6%9C%80%E5%A4%A7%E4%BC%BC%E7%84%B6%E4%BC%B0%E8%AE%A1)"
+    "## [最大似然估计（maximum likelihood estimation，缩写为MLE）](https://zh.wikipedia.org/wiki/%E6%9C%80%E5%A4%A7%E4%BC%BC%E7%84%B6%E4%BC%B0%E8%AE%A1)"
    ]
   },
   {
@@ -201,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Lagrange 对偶与KKT条件](https://wizardforcel.gitbooks.io/dm-algo-top10/content/svm-2.html)"
+    "## [Lagrange 对偶与KKT条件](https://wizardforcel.gitbooks.io/dm-algo-top10/content/svm-2.html)"
    ]
   },
   {
