--- a/CH3_线性回归.ipynb
+++ b/CH3_线性回归.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 线性回归"
+    "# 线性回归"
    ]
   },
   {
@@ -22,9 +22,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MSE: 均方误差\n",
+    "## MSE: 均方误差\n",
     "\n",
-    "对于样例集合$D = \\{ (\\mathbf{x}_1, y_1), (\\mathbf{x}_2, y_2), ... , (\\mathbf{x}_n, y_n)\\},通过“均方误差”（mean squared error）来进行性能度量：\n",
+    "对于样例集合$D = \\{ (\\mathbf{x}_1, y_1), (\\mathbf{x}_2, y_2), ... , (\\mathbf{x}_n, y_n)\\}$,通过“均方误差”（mean squared error）来进行性能度量：\n",
     "\n",
     "$$E(f;D) = \\frac{1}{m}\\sum_{i=1}^m (f(\\mathbf{x}_i) - y_i)^2$$\n",
     "\n",
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 一元线性回归\n",
+    "## 一元线性回归\n",
     "\n",
     "对于集合$D = \\{(x_i, y_i)\\}_{i=1}^m,$一元线性回归试图学习得到如下映射关系：\n",
     "\n",
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 多元线性回归\n",
+    "## 多元线性回归\n",
     "\n",
     "更一般的情形是本节开头所提到的数据集 $D = \\{\\mathbf{x}^1, ...,\\mathbf{x}^m\\}, \\quad \\mathbf{x}^k = (x_1^k, ... , x_n^k)$, 我们试图获得学习器（逼近函数）：\n",
     "\n",
@@ -79,7 +79,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 模型优化"
+    "## 梯度下降法求解\n",
+    "\n",
+    "梯度下降法的求解公式如下："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\\theta_j = &\\theta_j - \\alpha \\frac{\\partial J(\\theta)}{\\partial \\theta_j}\\\\\n",
+    "= &\\theta_j - \\frac{\\alpha}{m}\\sum_{i=1}^{m}(h(\\textbf{x}^{(i)})-y^{(i)})x_j^{(i)}\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "更详细的内容请参考**“CH2_最优化理论”**。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 模型优化"
    ]
   },
   {
@@ -103,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 示例：测算房价\n",
+    "## 示例：测算房价\n",
     "\n",
     "使用sklearn 自带的波士顿房价数据来训练模型，然后用模型来预测房价。"
    ]
