--- a/CH4_逻辑回归.ipynb
+++ b/CH4_逻辑回归.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 逻辑回归"
+    "# 逻辑回归"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 广义线性模型"
+    "## 广义线性模型"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 对数线性回归\n",
+    "## 对数线性回归\n",
     "\n",
     "当式 (linear) 中的 g 为 $\\ln(x)$ 时，称 $y = e^{(\\mathbf{w}^T\\mathbf{x} + b)}$为对数线性回归。"
    ]
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 逻辑回归（对数几率回归）"
+    "## 逻辑回归（对数几率回归）"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 映射角度看分类器LR"
+    "## 映射角度看分类器LR"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [sklearn.linear_model.LogisticRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)"
+    "## [sklearn.linear_model.LogisticRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 乳腺癌检测 "
+    "## 乳腺癌检测 "
    ]
   },
   {
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 数据采集及特征提取\n",
+    "### 数据采集及特征提取\n",
     "\n",
     "首先，从病灶造影图片上提取10个关键属性特征，构造出每个特征的标准差以及最大值，总共形成30个特征。**提取特征时，从事物的内在逻辑关系入手，分析已有特征之间的关系，从而构造新的特征。**"
    ]
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 模型训练"
+    "### 模型训练"
    ]
   },
   {
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 模型优化"
+    "### 模型优化"
    ]
   },
   {
@@ -540,7 +540,7 @@
     }
    },
    "source": [
-    "#### 学习曲线\n",
+    "### 学习曲线\n",
     "\n",
     "如何知道L1提高算法准确性？画出L1和L2各自对应的学习曲线，通过对比就可以知道最适合模型的正则项。"
    ]
