--- a/CH6_决策树.ipynb
+++ b/CH6_决策树.ipynb
@@ -4,18 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 决策树"
+    "# 决策树"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 基本流程\n",
+    "决策树分为分类树和回归树。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 基本流程\n",
     "\n",
     "我们使用决策树作为预测模型来预测样本的类标，这种决策树也称作分类树或回归树。在这些树的结构里， 叶子节点给出类标而内部节点代表某个属性。以分类树为例，我们把样本分类的任务，可以看作对“当前样本属于正类吗？”这个问题“决策”或“判定”的过程。\n",
     "\n",
-    "决策树是基于**树结构（一种特殊的图结构）**来进行决策的。一般地，一棵决策树包含一个根节点、若干个内部节点和若干叶节点，叶节点存储的是决策结果，其他子节点对应的是属性分类器。**从根节点到每个叶节点的路径对应了一个判定测试序列，决策树的生成是一个递归过程**。"
+    "决策树是基于**树结构（一种特殊的图结构）**来进行决策的。一般地，一棵决策树包含一个根节点、若干个内部节点和若干叶节点，叶节点存储的是决策结果，其他子节点对应的是属性分类器。**从根节点到每个叶节点的路径对应了一个判定测试序列，决策树的生成是一个递归过程**。\n",
+    "\n",
+    "构建决策树时通常采用自上而下的方法，在每一步选择一个最好的属性来分裂。分类树和回归树有着不同的分裂方法。下面我们先介绍分类树。"
    ]
   },
   {
@@ -29,21 +38,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "构建决策树时通常采用自上而下的方法，在每一步选择一个最好的属性来分裂。\"最好\" 的定义是使得子节点中的训练集纯度足够高。不同的算法使用不同的指标来定义\"最好\"。本部分介绍两个指标：**信息熵**和**基尼指数**。"
+    "# 分类树"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 信息增益"
+    "对于分类树而言，\"最好\" 的定义是使得子节点中的训练集纯度足够高。不同的算法使用不同的指标来定义\"最好\"。本部分介绍两个指标：**信息熵**和**基尼指数**。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 信息熵\n",
+    "## 信息增益"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 信息熵\n",
     "\n",
     "**a.信息量**"
    ]
@@ -81,14 +97,16 @@
     "\n",
     "如果集合D为离散集合，里面一共有|y|个样本，第k个样本所占比例为$p_k$，则D的信息熵定义为：\n",
     "\n",
-    "$$ Ent(D)=-\\sum_{k=1}^{|y|}P_k log_{2}P_k$$"
+    "$$ Ent(D)=-\\sum_{k=1}^{|y|}P_k log_{2}P_k$$\n",
+    "\n",
+    "Ent(D)的值越小，则D的纯度越高，下面介绍的基尼指数也有这个性质。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 基尼指数\n",
+    "### 基尼指数\n",
     "\n",
     "CART决策树(Classification and Regression Tree) 使用“基尼指数”来选择划分属性。数据集D的纯度可以通过基尼值来度量：\n",
     "\n",
@@ -112,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 信息增益\n",
+    "### 信息增益\n",
     "\n",
     "_**以信息熵为例来给出信息增益公式，该公式也适用于基尼指数。**_"
    ]
@@ -123,12 +141,14 @@
    "source": [
     "**信息熵是度量样本集合纯度最常用的一个指标(基尼指数也可以)，Ent(D)的值越小，则D的纯度越高（Gini(D)也是一样的性质），也就是这个集合说必然性和确定性越高。**比如一个放满了红苹果的篮子里，所有类别（其实就红色苹果一个类别）对应的信息熵为0。\n",
     "\n",
-    "假设离散属性a有V个可能的取值${a^1,a^2,...,a^V}$，如果使用a来对样本进行划分，则根节点会产生V个分支节点，根节点所对应的样本集合D相应划分成V个子集，其中第v个分支节点上包含了D中所有在属性a上取值为 $a^v$ 的样本，记为 $D^v$ 。\n",
+    "假设离散属性a有V个可能的取值 $\\{a^1,a^2,...,a^V\\}$，如果使用a来对样本进行划分，则根节点会产生V个分支节点，根节点所对应的样本集合D相应划分成V个子集，其中第v个分支节点上包含了D中所有在属性a上取值为 $a^v$ 的样本，记为 $D^v$ 。\n",
     "\n",
     "针对每个分支上的子集，也会有对应的信息熵$ Ent(D^v)$ ，我们通过权重 $\\frac{|D^v|}{|D|}$ 来给不同的节点赋予权重，让样本数越大的子集所对应的分支节点影响越大。那么我们可以给出属性a所对应的v个分支的整体信息熵如下：\n",
+    "\n",
     "$$ Ent(D,a)=\\sum_{v=1}^{V}\\frac{|D^v|}{|D|} Ent(D^v)$$\n",
     "\n",
     "于是，我们可以计算出通过属性a来进行划分集合D所带来的_**“不确定性的减小（确定性的增加，纯度的提高）”，我们称之为“信息增益”，可以视之为属性a本身所带来的信息量**_。信息增益（information gain）定义如下：\n",
+    "\n",
     "$$ \\begin{split}Gain(D,a) = & Ent(D) - Ent(D,a) \\\\\n",
     "= & Ent(D) - \\sum_{v=1}^{V}\\frac{|D^v|}{|D|} Ent(D^v)\n",
     "\\end{split}$$"
@@ -152,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 增益率"
+    "### 增益率"
    ]
   },
   {
@@ -182,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### gini和entropy曲线对比"
+    "### gini和entropy曲线对比"
    ]
   },
   {
@@ -247,22 +267,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### 防止过拟合：剪枝算法\n",
+    "## 防止过拟合：剪枝算法\n",
     "\n",
     "使用决策树模型进行拟合数据时，容易造成过拟合。解决办法是对决策树进行剪枝处理。有两种思路：预剪枝（Pre-Pruning）和后剪枝（Post-Pruning）。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "#### 预剪枝 \n",
+    "### 预剪枝 \n",
     "\n",
     "**定义**\n",
     "\n",
@@ -280,11 +296,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "#### 后剪枝 \n",
+    "### 后剪枝 \n",
     "\n",
     "**定义**\n",
     "\n",
@@ -306,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 连续值处理\n",
+    "## 连续值处理\n",
     "\n",
     "上面的理论都限定于离散属性，遇到连续属性，可以通过连续属性离散化的技术来处理，比如二分法。\n",
     "\n",
@@ -317,7 +331,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 多变量决策树\n",
+    "## 缺失值处理\n",
+    "\n",
+    "我们要面对两个问题：\n",
+    "\n",
+    "1. **从选择属性角度**：如何在属性有缺失值的情况下进行划分属性选择？\n",
+    "2. **从样本划分角度**：在给定划分属性后，如果样本在该属性值上缺失，如何对样本进行划分？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "给定训练集 D 和 属性 a，令 $\\tilde{D}$ 表示 D 中属性 a 上没有缺失值的样本子集。对于问题1，我们可以通过 $\\tilde{D}$ 来判断 a 的优劣。\n",
+    "\n",
+    "假设离散属性a有V个可能的取值$\\{a^1,a^2,...,a^V\\}$，令 $\\tilde{D}^v$ 表示在 D 中 属性 a 取值为 $a^v$ 的样本子集， $\\tilde{D}_k$ 表示 D 中 属于第 k 类($k = 1,2, ...,|Y|$)的样本子集，显然有 $\\tilde{D} = \\cup_{k=1}^{|Y|}\\tilde{D}_k， \\tilde{D} = \\cup_{v=1}^{V}\\tilde{D}^v$。假定我们为每个样本赋予一个权重$ w_{\\mathbf{x}}$，定义\n",
+    "\n",
+    "$$\\begin{split}\n",
+    " \\rho &= \\frac{\\sum_{\\mathbf{x}\\in \\tilde{D}} w_{\\mathbf{x}}}{\\sum_{\\mathbf{x}\\in D} w_{\\mathbf{x}}}\\\\\n",
+    " \\tilde{p}_k &= \\frac{\\sum_{\\mathbf{x}\\in \\tilde{D}_k} w_{\\mathbf{x}}}{\\sum_{\\mathbf{x}\\in \\tilde{D}} w_{\\mathbf{x}}} \\quad (1\\leq k \\leq |Y|) \\\\\n",
+    "\\tilde{r}_v &= \\frac{\\sum_{\\mathbf{x}\\in \\tilde{D}^v} w_{\\mathbf{x}}}{\\sum_{\\mathbf{x}\\in \\tilde{D}} w_{\\mathbf{x}}} \\quad (1\\leq v \\leq V)\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "直观地看，对于属性 a， $\\rho$ 表示无缺失值样本所占整体样本的比例，$\\tilde{p}_k$ 表示无缺失值样本中标签为第 k 类的样本的比例， $\\tilde{r}_v$ 表示属性 a 上取值为 $a^v$ 的样本所占的比例。显然，$\\sum_{k=1}^{|Y|}\\tilde{p}_k = 1， \\sum_{v=1}^{V}\\tilde{r}^v = 1$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "基于上面的定义，我们可以将信息增益的公式进行加权推广为\n",
+    "\n",
+    "$$ \\begin{split}Gain(D,a) &= \\rho\\times Gain(\\tilde{D},a)\\\\\n",
+    "&= \\rho\\times\\left(Ent(\\tilde{D}) - \\sum_{v=1}^{V}\\tilde{r}^v Ent(\\tilde{D}^v)\\right)\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "其中\n",
+    "\n",
+    "$$ Ent(\\tilde{D})=-\\sum_{k=1}^{|Y|}\\tilde{p}_k log_{2}\\tilde{p}_k$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于问题2，样本 $\\mathbf{x}$ 在划分属性 a 上的取值未知，则**将 $\\mathbf{x}$ 同时划入所有子节点，并且在属性值 $a^v$ 对应的子集中更新样本权重 $\\tilde{w}_\\mathbf{x} = \\tilde{r}_v w_\\mathbf{x}$.直观看，就是让同一个样本以不同的概率划入到不同的子节点中去。**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 多变量决策树\n",
     "\n",
     "若把每个属性视为空间的一个坐标轴，则之前对样本集合D的划分边界线都是和坐标轴平行的。当属性太多时，要进行大量的属性测试，时间成本高。如果非叶节点不再是对某个属性，而是对属性的线性组合进行测试，寻找合适的线性分类器，就可以得到一棵多变量决策树。"
    ]
@@ -326,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 对模型的实验总结\n",
+    "## 对模型的实验总结\n",
     "\n",
     "1. 在信息增益、增益率、基尼指数外，还可以设计其他的准则，这些准则虽然对决策树的尺寸有较大影响，但对泛化性能影响有限。有研究表明，仅在2%的情况下有所不同；在运算效率上，基尼指数会快一些，因为不涉及对数运算。\n",
     "2. 剪枝方法和程度对决策树泛化能力性能有显著的影响。有实验研究表明，数据带有噪声时通过剪枝最多可以提高泛化能力到25%。"
@@ -336,14 +411,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [sklearn.tree.DecisionTreeClassifier](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html#sklearn-tree-decisiontreeclassifier)"
+    "## [sklearn.tree.DecisionTreeClassifier](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html#sklearn-tree-decisiontreeclassifier)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 预测泰坦尼克号幸存者\n",
+    "## 预测泰坦尼克号幸存者\n",
     "\n",
     "我们通过决策树模型来预测哪些人可能成为幸存者。"
    ]
@@ -352,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 数据分析"
+    "### 数据分析"
    ]
   },
   {
@@ -535,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 模型训练"
+    "### 模型训练"
    ]
   },
   {
@@ -608,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 优化模型参数"
+    "### 优化模型参数"
    ]
   },
   {
@@ -791,7 +866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [sklearn.model_selection.GridSearchCV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)"
+    "### [sklearn.model_selection.GridSearchCV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)"
    ]
   },
   {
@@ -938,7 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 生成决策树图形"
+    "### 生成决策树图形"
    ]
   },
   {
@@ -982,6 +1057,222 @@
    "source": [
     "<img src=\"figure/titanic.png\" width=\"500\" hegiht=\"400\" align=left />"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 回归树"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面内容参考自 统计学习书 [ESL](https://web.stanford.edu/~hastie/Papers/ESLII.pdf)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 基本想法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "回归树是针对连续型的训练样本，是一个预测新样本的值的外套。\n",
+    "\n",
+    "假设我们的训练数据有两个连续数值的特征，即样本向量为$(X_1, X_2, Y)$。下面左图是由两个特征组成的特征空间，我们采用二分法来讲特征空间分成不同的区域$R_i$。对于新的要预测样本，我们按照**特征划分顺序**和**特征最佳划分值**对新样本进行归类，并且将新样本所属区域的**一个特定常数**视为新样本的预测值。\n",
+    "\n",
+    "所以我们的重点是：\n",
+    "1. **通过递归的方法通过二分法来在每一次划分中选择最佳的划分属性及对应的属性划分值**；\n",
+    "2. **迭代停止的条件**。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如下图所示，特征空间被分为5个区域，假设每个区域对应对应的特定常数为$c_i$，则对于新的变量 $\\mathbf{X}$, 对应的预测值  $\\tilde{f}(\\mathbf{X})$ 为\n",
+    "\n",
+    "$$\\tilde{f}(\\mathbf{X}) = \\sum_{m=1}^5 c_m I(\\{X_1, X_2\\}\\in R_m)$$\n",
+    "\n",
+    "其中 $I(\\cdot)$ 表示真值函数，即里面的条件为真取值为1，否则取值为0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "也就是说，对于新样本属于哪个区域，则取值为对应的常数$c_m$.这个划分的过程也可以等价转化为下面有图的表达形式。 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-11T05:03:05.411000Z",
+     "start_time": "2019-01-11T05:03:05.388000Z"
+    }
+   },
+   "source": [
+    "<img src=\"figure/regressiontree_1.png\" width=\"400\" hegiht=\"300\" align=left />\n",
+    "<img src=\"figure/regressiontree_2.png\" width=\"400\" hegiht=\"300\" align=right />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 求解回归树"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面我们讨论一般意义上如何生成一棵回归树。\n",
+    "\n",
+    "给定训练数据集 $D = \\{ (\\mathbf{x}_1, y_1), (\\mathbf{x}_2, y_2), ... , (\\mathbf{x}_N, y_N)\\},$ 其中 $ \\mathbf{x}_i = (x_{i1}, x_{i2}, ...,x_{ip})$。 我们的问题是针对 p 个特征，如何在每一个节点选择分裂特征以及特征的分裂值。假设我们已经将特征空间分为 M 个区域 $R_1, R_2, ... , R_m$,模型在每个区域的取值为$c_m$：\n",
+    "\n",
+    "$$f(\\mathbf{x}) = \\sum_{m=1}^M c_m I(\\mathbf{x}\\in R_m)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "假设我们的优化目标是\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "\\arg\\min_{\\{c_m\\}}J(\\{c_m\\}) = & \\arg\\min_{\\{c_m\\}}\\sum_{\\mathbf{x}\\in D}(y_i - f(\\mathbf{x}_i))^2\\\\\n",
+    "=& \\arg\\min_{\\{c_m\\}}\\sum_{\\mathbf{x}\\in D}\\left(y_i - \\sum_{m=1}^M c_m I(\\mathbf{x}_i\\in R_m)\\right)^2\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上式关于 $c_m$ 求导 $\\frac{\\partial J}{\\partial c_m} = 0$，可得\n",
+    "\n",
+    "$$\\hat{c}_m = \\frac{\\sum_{\\mathbf{x}\\in R_m}y_i}{|R_m|}$$\n",
+    "\n",
+    "其中 $|\\cdot|$ 表示集合的元素数量或者长度。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "直观来讲，就是以区域$R_m$ 的所有训练样本的均值作为系数，对应的误差是最小的。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在每一轮的迭代中，对于特征向量 X ，我们假设以第 j 个属性和该属性的值 s 来进行划分父样本空间。我们记被 $(j, s)$划分的两个半空间对为\n",
+    "\n",
+    "$$ R_1(j, s) = \\{X| X_j \\leq s\\} \\; and \\; R_2(j, s) = \\{X| X_j > s\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们的目标就是寻找最佳的 划分属性 j 和 属性值 s,等价于\n",
+    "\n",
+    "$$\\min_{(j,s)}\\left[\\min_{c_1}\\sum_{\\mathbf{x}_i \\in R_1(j,s)}(y_i - c_1)^2 + \\min_{c_2}\\sum_{\\mathbf{x}_i \\in R_2(j,s)}(y_i - c_2)^2\\right]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对任意的 (j, s)，里层的最小化已经得到解如下：\n",
+    "\n",
+    "$$\\hat{c}_1 = \\frac{\\sum_{\\mathbf{x}\\in R_1}y_i}{|R_1|} \\; and \\; \\hat{c}_2 = \\frac{\\sum_{\\mathbf{x}\\in R_2}y_i}{|R_2|}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "至于最佳的 $(j,s)$ 通过双层遍历 （属性，属性值）或者其他更快的方法就可以求解。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们还有一个问题没有解决，就是这个回归树的深度问题，也就是迭代的停止条件。比较基础的方法就是，**计算相邻两轮迭代所对应的MSE 的差，也就是 迭代过程中 MSE 的减小是否大于某个阈值，如果大于就继续分裂，否则就停止。**\n",
+    "\n",
+    "然而这个方法过于短视，因为有可能在某一轮虽然 MSE 没有变化，在其后的迭代中有可能会变得更好。那么我们下面采用正则化加惩罚项的做法来作为一个停止分裂的策略。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 正则化与后剪枝"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们假设 $T \\in T_0$ 是任意一棵通过 $T_0$ 剪枝之后得到的树。假设树 T 对应的叶节点数目为 $|T|$,第 m 个叶节点对应的区域为$R_m$.记\n",
+    "\n",
+    "$$N_m = |\\mathbf{x}_i\\in R_m|$$\n",
+    "\n",
+    "$$\\hat{c}_m = \\frac{\\sum_{\\mathbf{x}\\in R_m}y_i}{|R_m|}$$\n",
+    "\n",
+    "$$Q_m(T) = \\frac{1}{N_m}\\sum_{\\mathbf{x}\\in R_m}(y_i - \\hat{c}_m)^2$$\n",
+    "\n",
+    "我们定义成本函数为\n",
+    "\n",
+    "$$C_{\\alpha}(T) = \\sum_{m=1}^{|T|}N_m Q_m(T) + \\alpha |T|$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们的优化目标变为\n",
+    "$$\\arg\\min_{\\alpha}C_{\\alpha}(T)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "通过上式可知，系数 $\\alpha$ 影响着树的尺寸，$\\alpha$ 越大，则对应的树 T 约小，反之越大。在 SVM理论中 “软间隔与正则化”章节也有同样的处理思路。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以首先固定 $\\alpha$， 从叶节点开始向上进行后剪枝来得到对应的树 $T_{\\alpha}$ 使得 $C_{\\alpha}(T)$最小，然后再通过 k 折交叉验证求解最小的$\\hat{\\alpha}$，也就得到了最好的$\\hat{T_{\\alpha}}$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [sklearn.tree.DecisionTreeRegressor](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html#sklearn.tree.DecisionTreeRegressor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
