--- a/CH7_朴素贝叶斯分类器.ipynb
+++ b/CH7_朴素贝叶斯分类器.ipynb
@@ -4,34 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 朴素贝叶斯分类器"
+    "# 朴素贝叶斯分类器"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### 似然\n",
+    "## 似然\n",
     "\n",
     "[似然函数的定义](https://zh.wikipedia.org/wiki/%E4%BC%BC%E7%84%B6%E5%87%BD%E6%95%B0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### 朴素贝叶斯分类器公式"
+    "## 朴素贝叶斯分类器公式"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "给定已标记数据集 $D = \\{ (\\mathbf{x}_1, y_1), (\\mathbf{x}_2, y_2), ... , (\\mathbf{x}_n, y_n)\\},$ 其中 $ \\mathbf{x}_i = (x_{i1}, x_{i2}, ...,x_{id}), y_i\\in \\widehat{C} = \\{C_1, C_2, ... , C_b\\}$.\n",
     "\n",
@@ -46,9 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "直接求解上式比较难，我们可以通过贝叶斯公式来进行一次变换：\n",
     "\n",
@@ -57,9 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "对于确定的数据集， $C_k, P(\\mathbf{x})$ 都是固定的值，所以：\n",
     "\n",
@@ -74,9 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "根据联合概率公式，有\n",
     "\n",
@@ -89,9 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "从上式中我们发现，$P(x_1, x_2, ... , x_n, C_k)$是所有属性特征的联合分布，很难从有限的训练样本上直接估计而得。**为避开这个障碍，朴素贝叶斯分类器采用了“属性条件独立性假设”：对所有类别，假设所有属性相互独立，也就是说，假设每个属性独立地对分类结果发生影响。**\n",
     "\n",
@@ -110,9 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "其中，$P(C_k)$ 表示 训练集中每个类别出现的概率，可以统计得出；$P(x_i|C_k)$表示当类别为 $C_k$ 时，特征 $x_i$ 出现的概率，这个值也可以统计得出。以上我们就得出了最原始的朴素贝叶斯分类器的数学表达式，本质上是一个**最大似然估计**。\n",
     "\n",
@@ -121,9 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "令 $\\widehat{D}_{C_k}$ 表示训练集 $\\widehat{D}$ 中 k 类样本组成的集合，在朴素贝叶斯的假设下，可以容易估计出类别的先验概率：\n",
     "\n",
@@ -132,9 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "对离散属性而言， 令 $\\widehat{D}_{C_k, x_{ij}}$ 表示$\\widehat{D}_{C_k}$ 中在第 i 个特征上取值为 $x_{ij}$ 的样本组成的集合，则条件概率 $P(x_i=x_{ij}|C_k)$可估计为：\n",
     "\n",
@@ -143,27 +123,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**注：当某个特征的值不是离散值是连续值时，可以通过假设该特征满足某个分布（比如高斯分布），通过计算其均值、方差然后得到概率密度函数，然后将该属性的值带入密度函数计算其条件概率。**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### 拉普拉斯平滑与增量学习"
+    "## 拉普拉斯平滑与增量学习"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "在进行分类的时候，会存在某些特征的某个属性值没有在训练集中与某个类同时出现过，对应的概率为0。为了避免这种情况，在进行概率估计时常常要进行“平滑”。令 $N_i$ 表示第i个特征的所有枚举可能值的数量。则\n",
     "\n",
@@ -174,18 +148,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "其中 $\\lambda$ 为平滑因子，当取值为1时，就是**“拉普拉斯平滑”**。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**懒惰学习与增量学习：**\n",
     "\n",
@@ -198,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [sklearn.naive_bayes](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.naive_bayes)\n",
+    "## [sklearn.naive_bayes](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.naive_bayes)\n",
     "1. 高斯分布：[naive_bayes.GaussianNB](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html#sklearn.naive_bayes.GaussianNB)\n",
     "2. 伯努利分布：[naive_bayes.BernoulliNB](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.BernoulliNB.html#sklearn.naive_bayes.BernoulliNB)。其中参数 binarize 为二值化的阈值，默认为0，如果输入其他值，大于该值的为1，小于该值的为0.\n",
     "    \n",
@@ -212,6 +182,13 @@
     "* 如果如果样本特征大部分是多元离散值，使用MultinomialNB比较合适；\n",
     "* 而如果样本特征是二元离散值或者很稀疏的多元离散值，应该使用BernoulliNB。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -263,7 +240,7 @@
     "height": "473px",
     "left": "1207px",
     "top": "134px",
-    "width": "302px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
